--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
