--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
+    "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
