--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
